# mini_project

C++/design-patterns/adapter-pattern/: composition.cpp  multiple_inheritance.cpp
C++/design-patterns/factory-method/: main.cpp
C++/eigen/random_matrix/: main.cpp
C++/eigen/tutor/: Makefile  main.cpp
C++/getenv/: a.out  main.cpp
C++/variadic_pack/: a.out  main.cpp
C/networt-programming/lookup-IP-hostname/: lookup.c
C/networt-programming/socket-setup/: a.out  sock_init  sock_init.c  time_console.c  time_server.c
C/networt-programming/tcp-client/: .tcp_client.c.swp  a.out  tcp_client.c
C/networt-programming/tcp-server/: tcp_server_to_upper.c
C/networt-programming/udp-client/: udp_client.c  udp_sendto.c
C/networt-programming/udp-server/: udp_recvfrom.c  udp_server_toupper.c
C/networt-programming/web-client/: header_config.h  web_get.c
GCC/autotools/libtool/static/: Makefile.am  configure.ac
GCC/autotools/my-demo/: Makefile.am  configure.ac
GCC/gcov/: README.md  a.out  main.c  main.c.gcov  main.gcda  main.gcno  second_fun.c  second_fun.c.gcov
GCC/gprof/: README.md  a.out  gmon.out  main.c  quick_function.c  quick_function.h  slow_function.c  slow_function.h
GCC/makefile/create-static-libary/: Makefile  main.c  my_math.c  my_math.h
GCC/makefile/prereq-newer-than-target/: Makefile  README.md  foo.c  foo.h  main  main.c
Linux/i3wm/config/: config
Nvidia/: README.md
Nvidia/CUDA/compilation-example/: README.md  a.out  cuda_header.h  cuda_header.h.gch  (+2 more)
Nvidia/parallel_plain_c++/: README.md  TO_FINNISH
OpenACC/for_loop/: a.out  main.cpp
(+87 files in other folders)
